--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,5 +1,7 @@
 <form action="/bookmarks" method="post">
-  <label for="url">Your new bookmark:</label><br>
+  <label for="url">link:</label><br>
   <input type="text" id="url" name="url"><br>
+  <label for="title">title:</label><br>
+  <input type="text" id="title" name="title"><br>
   <input type="submit" value="Submit">
 </form> 
