--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -2,6 +2,10 @@
   <% @bookmarks.each do |bookmark| %>
     <li>
       <a href="<%= bookmark.url %>"><%= bookmark.title %></a>
+      <form action="/bookmarks/<%= bookmark.id%>" method="post">
+        <input type='hidden' name='_method' value='DELETE'/>
+        <input type="submit" value="delete"/> 
+      </form>
     </li>
   <% end %>
 </ul>
